@@ -1,5 +1,7 @@
     * Fixed a documentation problem with the test_files passed as an argument
     to runtests.
+    * Added a test to test against the presence of the per-test-file
+    statistics report. (implemnetd using formats for the time being.)
 
 0.0100_02 Mon Oct 31 00:37:26 IST 2005
     * Changed the string Test::Harness to Test::Shlomif::Harness in 
